k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: backend-container
        image: ghcr.io/himatsumu/himatsumu_back:latest
        ports:
        - containerPort: 8888
